Change my name with full suffix name

--- a/About.html
+++ b/About.html
@@ -59,7 +59,7 @@
     <h1>ABOUT |</h1>
     <div class="bio">
         <p>
-            Hey, I am Raghavi M, I am currenty a student pursuing Engineering at SIDDAGANGA INSTITUTE OF TECHNOLOGY and my major is in Information Science.
+            Hey, I am Raghavi Murugesh, I am currenty a student pursuing Engineering at SIDDAGANGA INSTITUTE OF TECHNOLOGY and my major is in Information Science.
             I come from the part, known for technology and shart-ups,Bengaluru,Karnatake.And hence is the fact for me to share my passion in Science of Information and Technology.
         </p>
     </div>
