update0 About.html
spelling check

--- a/About.html
+++ b/About.html
@@ -22,12 +22,12 @@
         .bio {
             color: #92a8d1;
             font-family: "OCR A";
-            font-size: 13pt;
+            font-size: 18pt;
             width: 65%;
             position: absolute;
             bottom: 0;
             right: 90px;
-            top: 260px;
+            top: 230px;
         }
 
         .skills {
@@ -60,7 +60,7 @@
     <div class="bio">
         <p>
             Hey, I am Raghavi Murugesh, I am currenty a student pursuing Engineering at SIDDAGANGA INSTITUTE OF TECHNOLOGY and my major is in Information Science.
-            I come from the part, known for technology and shart-ups,Bengaluru,Karnatake.And hence is the fact for me to share my passion in Science of Information and Technology.
+            I come from the part, known for technology and start-ups,Bengaluru,Karnatake.And hence is the fact for me to share my passion in Science of Information and Technology.
         </p>
     </div>
     <div class="skills" ; style="color:white;">
