Update0 Project.html
spelling review

--- a/Project.html
+++ b/Project.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <h2 style="color:#92a8d1; font-size:30pt; margin-top:90pt; margin-bottom:0pt;">Yet To Be Add...</h2>
+    <h2 style="color:#92a8d1; font-size:30pt; margin-top:90pt; margin-bottom:0pt;">Yet To Be Added...</h2>
 </body>
 </html>
